# jftt2014-compiler

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindGMP.cmake  FindGMPXX.cmake
examples/mgc/: error1.imp  error2.imp  error3.imp  error4.imp  error5.imp  error6.imp  program0.imp  program1.imp  program2.imp
examples/mgc-mr/: const-0.mr  program0.mr  program1.mr
examples/moje/: 0.imp  1.imp  2.imp  3.imp  add-0.imp  add-1.imp  assign-0.imp  assign-1.imp  assign-error-0.imp  assign-error-1.imp  const-0.imp  const-1.imp  const-add-0.imp  const-divide-0.imp  const-modulo-0.imp  const-multiply-0.imp  const-subtract-0.imp  divide-0.imp  divide-1.imp  divide-2.imp  eq-0.imp  gt-0.imp  if-0.imp  if-2.imp  if-eq-0.imp  if-eq-1.imp  if-ge-0.imp  if-gt-0.imp  if-le-0.imp  if-lt-0.imp  if-ne-0.imp  modulo-0.imp  modulo-1.imp  multiply-0.imp  multiply-1.imp  multiply-2.imp  multiply-3.imp  multiply-4.imp  ne-0.imp  read-0.imp  (+4 more)
skrypty/: mc_delete_comments.sh
src/: Command.cc  Command.hh  Commands.cc  Commands.hh  Condition.hh  Expression.hh  ISymbolTable.cc  ISymbolTable.hh  SymbolTable.cc  SymbolTable.hh  code.hh  config.hh.in  copy_value.cc  expression.hh  generate_const.cc  generate_number.cc  main.cc  parser.y  scanner.hh  scanner.l
src/code/: add.cc  code.hh  compare_eq.cc  compare_ge.cc  compare_gt.cc  compare_le.cc  compare_lt.cc  compare_ne.cc  copy_value.cc  divide.cc  generate_number.cc  is_two_power.cc  modulo.cc  multiply.cc  pad_left.cc  subtract.cc
szablony/: dzielenie.txt  eq.txt  ge.txt  gt.txt  le.txt  lt.txt  mnozenie.txt  ne.txt  padleft.txt
vm/: CMakeLists.txt
vm/src/: interpreter.cc
